# GraphicsPlayground

./: .gitignore  CMakeLists.txt  vcpkg.json
cmake/: data.cmake
common/gl/: CMakeLists.txt
common/gl/include/gl/: camera.h  engine.h  error.h  framebuffer.h  mesh.h  model.h  shader.h  texture.h  vertex_array.h
common/gl/src/: camera.cpp  engine.cpp  error.cpp  framebuffer.cpp  mesh.cpp  model.cpp  shader.cpp  texture.cpp  vertex_array.cpp
common/vulkan/: CMakeLists.txt
common/vulkan/include/vk/: engine.h  imgui.h  texture.h  utility.h
common/vulkan/src/: engine.cpp  texture.cpp  utility.cpp  vma_implementation.cpp
core/: CMakeLists.txt
core/include/: component.h  engine.h  filesystem.h  jobsystem.h  log.h  scene.h  service_locator.h  transform.h
core/src/: component.cpp  filesystem.cpp  jobsystem.cpp  log.cpp  transform.cpp
core/test/: test_job_system.cpp
data/shaders/hello_triangle/: triangle.frag
include/: engine.h  filesystem.h  service_locator.h
include/gl/: shader.h
main/: hello_triangle.cpp
main/egj/src/: main.cpp
main/gl/: CMakeLists.txt
main/gl/01_hello_triangle/: hello_triangle.cpp
main/gl/01_hello_triangle/data/shaders/: quad.frag
main/gl/02_hello_texture/: hello_texture.cpp
main/gl/03_hello_cube/: hello_cube.cpp
main/gl/03_hello_cube/data/shaders/: cube.vert
main/gl/data/model/nanosuit2/: nanosuit.gltf
main/gl/data/shaders/01_hello_triangle/: quad.vert
main/gl/data/shaders/07_hello_model/: model.frag  model.vert
main/gl/data/shaders/12_hello_culling/: model.frag  model.vert
main/gl/data/shaders/15_hello_normal/: model.frag  model.vert  normal.frag  normal.vert
main/gl/data/shaders/16_hello_shadow/: shadow.frag  shadow.vert
main/gl/data/shaders/17_hello_point_shadow/: simpleDepth.frag
main/gl/data/shaders/18_hello_cascaded_shadow/: screen.frag  shadow.frag
main/gl/data/shaders/19_hello_hdr/: hdr_screen.frag
main/gl/data/shaders/20_hello_bloom/: cube.frag
main/gl/data/shaders/21_hello_deferred/: deferred.frag  forward.frag
main/gl/data/shaders/22_hello_ssao/: ssao_blur.frag
main/gl/data/shaders/23_hello_pbr/: pbr.frag
main/gl/data/shaders/24_hello_pbr_textured/: pbr.frag
main/gl/data/textures/: brickwall.dds  brickwall.ktx  brickwall_normal.dds  brickwall_normal.ktx
main/gl/hello_triangle/: hello_triangle.cpp
main/gl/include/: hello_blending.h  hello_bloom.h  hello_cascaded_shadow.h  hello_cube.h  hello_cubemaps.h  hello_culling.h  hello_cutoff.h  hello_deferred.h  hello_framebuffer.h  hello_frustum.h  hello_hdr.h  hello_ibl.h  hello_instancing.h  hello_light.h  hello_model.h  hello_normal.h  hello_pbr.h  hello_pbr_textured.h  hello_point_shadow.h  hello_shadow.h  hello_ssao.h  hello_texture.h  hello_triangle.h  sample_browser.h
main/gl/src/: hello_blending.cpp  hello_bloom.cpp  hello_cascaded_shadow.cpp  hello_cube.cpp  hello_cubemaps.cpp  hello_culling.cpp  hello_cutoff.cpp  hello_deferred.cpp  hello_framebuffer.cpp  hello_frustum.cpp  hello_hdr.cpp  hello_ibl.cpp  hello_instancing.cpp  hello_light.cpp  hello_model.cpp  hello_normal.cpp  hello_pbr.cpp  hello_pbr_textured.cpp  hello_point_shadow.cpp  hello_shadow.cpp  hello_ssao.cpp  hello_texture.cpp  hello_triangle.cpp  main.cpp  sample_browser.cpp
main/rt_playground/: CMakeLists.txt
main/rt_playground/hello_triangle/: hello_triangle.cpp
main/rt_playground/rt_engine/include/rt/: engine.h
main/rt_playground/rt_engine/src/: engine.cpp
main/tools/: CMakeLists.txt
main/tools/src/: obj_to_gltf.cpp
main/vk/: CMakeLists.txt
main/vk/data/shaders/05_hello_uniform/: triangle.vert
main/vk/data/shaders/07_hello_cube/: cube.frag  cube.vert
main/vk/include/: hello_cube.h  hello_index_buffer.h  hello_input_buffer.h  hello_staging_buffer.h  hello_texture.h  hello_triangle.h  hello_uniform.h
main/vk/src/: hello_cube.cpp  hello_index_buffer.cpp  hello_input_buffer.cpp  hello_staging_buffer.cpp  hello_texture.cpp  hello_triangle.cpp  hello_uniform.cpp  main.cpp
main/vr_playground/: CMakeLists.txt
main/vr_playground/include/egj/: engine.h
main/vr_playground/src/: engine.cpp  hellovr_opengl_main.cpp  main.cpp
src/: engine.cpp  filesystem.cpp
src/gl/: shader.cpp
